--- a/index.html
+++ b/index.html
@@ -16,239 +16,242 @@
   <body>
     <!--------------------------------------------- Header / Navbar --------------------------------------------->
 
-      <header id="header">
-        <div class="logo">MG</div>
-        <input type="checkbox" id="nav_check" hidden />
-        <nav>
-          <ul>
-            <li><a href="#" class="nav_logo">MG </a></li>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Reach Out</a></li>
-          </ul>
-        </nav>
+    <header id="header">
+      <div class="logo">MG</div>
+      <input type="checkbox" id="nav_check" hidden />
+      <nav>
+        <ul>
+          <li><a href="#" class="nav_logo">MG </a></li>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Reach Out</a></li>
+        </ul>
+      </nav>
 
-        <label for="nav_check" class="hamburger">
-          <div></div>
-          <div></div>
-          <div></div>
-        </label>
-      </header>
+      <label for="nav_check" class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </label>
+    </header>
 
     <!----------------------------- Homepage Section  ----------------------------->
 
-      <div class="background"></div>
-      <div class="HomepageText">
-        <div class="Markus">Markus</div>
-        <div class="Gavra">Gavra</div>
-        <div class="SoftwareEngineerWebDesignStudent">
-          SOFTWARE ENGINEER & Web DESIGN STUDENT
-        </div>
+    <div class="background"></div>
+    <div class="HomepageText">
+      <div class="Markus">Markus</div>
+      <div class="Gavra">Gavra</div>
+      <div class="SoftwareEngineerWebDesignStudent">
+        SOFTWARE ENGINEER & Web DESIGN STUDENT
       </div>
+    </div>
 
     <!------------------------------- Circle Design ------------------------------->
 
-      <div class="CircleDesign">
-        <div class="Ellipse1"></div>
-        <div class="Ellipse2"></div>
-        <div class="Ellipse3"></div>
-        <div class="Ellipse4"></div>
-        <div class="Ellipse5"></div>
-        <div class="Ellipse6"></div>
-        <div class="Ellipse7"></div>
-        <div class="Ellipse8"></div>
-        <div class="Ellipse9"></div>
-        <div class="Ellipse10"></div>
-        <div class="Ellipse11"></div>
-        <div class="Ellipse12"></div>
-        <div class="Ellipse13"></div>
-        <div class="Ellipse14"></div>
-        <div class="Ellipse15"></div>
-        <div class="Ellipse16"></div>
-        <div class="Ellipse17"></div>
-      </div>
+    <div class="CircleDesign">
+      <div class="Ellipse1"></div>
+      <div class="Ellipse2"></div>
+      <div class="Ellipse3"></div>
+      <div class="Ellipse4"></div>
+      <div class="Ellipse5"></div>
+      <div class="Ellipse6"></div>
+      <div class="Ellipse7"></div>
+      <div class="Ellipse8"></div>
+      <div class="Ellipse9"></div>
+      <div class="Ellipse10"></div>
+      <div class="Ellipse11"></div>
+      <div class="Ellipse12"></div>
+      <div class="Ellipse13"></div>
+      <div class="Ellipse14"></div>
+      <div class="Ellipse15"></div>
+      <div class="Ellipse16"></div>
+      <div class="Ellipse17"></div>
+    </div>
 
     <!--------------------------------------------- About Me Section --------------------------------------------->
 
-      <section class="About_Me">
-        <div class="About_content">
-          <div class="image">
-            <img src="Icons/MG.jpg" alt="" />
-          </div>
-          <div class="header">
-            <h1>About Me</h1>
-            <p>
-              Hi, I'm Markus Gavra, welcome to my page! I'm a Romanian student at
-              the University of Guelph in Breslau, Ontario, specializing in
-              Software Engineering. I'm passionate about solving digital
-              challenges and see every obstacle as a chance for growth. When not
-              coding, I focus on fitness and strength training. Dive into my world
-              where technology and determination collide!
-            </p>
+    <section class="About_Me">
+      <div class="About_content">
+        <div class="image">
+          <img src="Icons/MG.jpg" alt="" />
+        </div>
+        <div class="header">
+          <h1>About Me</h1>
+          <p>
+            Hi, I'm Markus Gavra, welcome to my page! I'm a Romanian student at
+            the University of Guelph in Breslau, Ontario, specializing in
+            Software Engineering. I'm passionate about solving digital
+            challenges and see every obstacle as a chance for growth. When not
+            coding, I focus on fitness and strength training. Dive into my world
+            where technology and determination collide!
+          </p>
 
-            <div class="button">
-              <div class="skills-toggle" data-toggle-box>
-                <button class="toggle-btn active" data-toggle-btn>Skills</button>
+          <div class="button">
+            <div class="skills-toggle" data-toggle-box>
+              <button class="toggle-btn active" data-toggle-btn>Skills</button>
 
-                <button class="toggle-btn" data-toggle-btn>Hobbies</button>
-              </div>
+              <button class="toggle-btn" data-toggle-btn>Hobbies</button>
             </div>
+          </div>
 
-            <div class="skills" id="skills">
-              <div class="skills-box" data-skills-box>
-                <ul class="skills-list">
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">HTML5</div>
+          <div class="skills" id="skills">
+            <div class="skills-box" data-skills-box>
+              <ul class="skills-list">
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">HTML5</div>
 
-                      <div class="card-icon">
-                        <img src="Icons/HTML.svg" alt="HTML5 logo" />
-                      </div>
+                    <div class="card-icon">
+                      <img src="Icons/HTML.svg" alt="HTML5 logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">CSS3</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">CSS3</div>
 
-                      <div class="card-icon">
-                        <img src="Icons/CSS.svg" alt="CSS3 logo" />
-                      </div>
+                    <div class="card-icon">
+                      <img src="Icons/CSS.svg" alt="CSS3 logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">JavaScript</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">JavaScript</div>
 
-                      <div class="card-icon">
-                        <img src="Icons/javascript.png" alt="JavaScript logo" />
-                      </div>
+                    <div class="card-icon">
+                      <img src="Icons/javascript.png" alt="JavaScript logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Java</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Java</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/Java.png" alt="Java logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/Java.png" alt="Java logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Python</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Python</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/python.svg" alt="Python logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/python.svg" alt="Python logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">C</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">C</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/C.svg" alt="C logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/C.svg" alt="C logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Firebase</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Firebase</div>
 
-                      <div class="card-icon">
-                        <img src="Icons/firebase.png" alt="Firebase logo" />
-                      </div>
+                    <div class="card-icon">
+                      <img src="Icons/firebase.png" alt="Firebase logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Github</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Github</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/Github.svg" alt="Github logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/Github.svg" alt="Github logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Git</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Git</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/Git.svg" alt="Git logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/Git.svg" alt="Git logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Figma</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Figma</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/Figma.svg" alt="Figma logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/Figma.svg" alt="Figma logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Windows</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Windows</div>
 
-                      <div class="windows-icon">
-                        <img src="Icons/Windows.svg" alt="Git logo" />
-                      </div>
+                    <div class="windows-icon">
+                      <img src="Icons/Windows.svg" alt="Git logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Linux</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Linux</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/Linux.svg" alt="Linux logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/Linux.svg" alt="Linux logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Vs Code</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Vs Code</div>
 
-                      <div class="special-icon">
-                        <img src="Icons/VS Code.svg" alt="Vs code logo" />
-                      </div>
+                    <div class="special-icon">
+                      <img src="Icons/VS Code.svg" alt="Vs code logo" />
                     </div>
-                  </li>
+                  </div>
+                </li>
 
-                  <li>
-                    <div class="skill-card">
-                      <div class="tooltip">Spline 3D</div>
+                <li>
+                  <div class="skill-card">
+                    <div class="tooltip">Spline 3D</div>
 
-                      <div class="card-icon">
-                        <img src="Icons/Spline.png" alt="Spline 3D logo" />
-                      </div>
+                    <div class="card-icon">
+                      <img src="Icons/Spline.png" alt="Spline 3D logo" />
                     </div>
-                  </li>
-                </ul>
+                  </div>
+                </li>
+              </ul>
 
-                <ul class="tools-list"></ul>
-              </div>
+              <ul class="tools-list">
+                <h2>➤ Web Developer</h2>
+                <h2>➤ Construction Hobbyist</h2>
+                <h2>➤ F1 Enthusiast</h2>
+              </ul>
             </div>
           </div>
         </div>
-      </section>
-    
+      </div>
+    </section>
+
     <!--------------------------------------------- Education / Experience Section --------------------------------------------->
-
-
   </body>
 </html>
+
