--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
+
+  <!-- Markus Gavra (1277056) -->
+  <!-- mgavra@uoguelph.ca -->
+
+  <!--------------------------------------------- Page #1 - Homepage / About Me / Education / Experiences --------------------------------------------->
 
   <body>
     <!--------------------------------------------- Header / Navbar --------------------------------------------->
@@ -23,8 +32,7 @@
         <ul>
           <li><a href="#" class="nav_logo">MG </a></li>
           <li><a href="#" class="active">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skills</a></li>
+          <li><a href="#">About Me</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Reach Out</a></li>
         </ul>
@@ -48,9 +56,9 @@
       </div>
     </div>
 
-    <!------------------------------- Circle Design ------------------------------->
+    <!------------------------------- Circle Design Transition ------------------------------->
 
-    <div class="CircleDesign">
+    <div class="CircleDesign1">
       <div class="Ellipse1"></div>
       <div class="Ellipse2"></div>
       <div class="Ellipse3"></div>
@@ -252,6 +260,116 @@
     </section>
 
     <!--------------------------------------------- Education / Experience Section --------------------------------------------->
+
+    <div class="container">
+      <main class="row">
+        <section class="col">
+          <header class="title">
+            <h2>EDUCATION</h2>
+          </header>
+
+          <div class="contents">
+            <div class="box">
+              <h4>2019 - 2023</h4>
+              <h3>High School Degree</h3>
+              <p>Grand River Collegiate Institute</p>
+              <p>Average: 91%</p>
+            </div>
+
+            <div class="box">
+              <h4>2023 - 2028</h4>
+              <h3>Bachelor’s of Computing (Software Engineering)</h3>
+              <p>University of Guelph</p>
+              <p>Current Average: 84%</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="col">
+          <header class="title">
+            <h2>EXPERIENCE</h2>
+          </header>
+
+          <div class="contents">
+            <div class="box">
+              <h4>2021 - Present</h4>
+              <h3>Project Manager</h3>
+              <p>Company: European Quality Painting</p>
+              <p>Skills: Leadership, Communication, Team Work</p>
+            </div>
+
+            <div class="box">
+              <h4>2024 - Present</h4>
+              <h3>UI Designer</h3>
+              <p>Organization: Eclipse Expos</p>
+              <p>Skills: Creativity, Collaboration, Team Work</p>
+            </div>
+
+            <div class="box">
+              <h4>2024 - Present</h4>
+              <h3>Event Committee Member</h3>
+              <p>Organization: SOCIS - University of Guelph</p>
+              <p>Skills: Organization, Team Work, Multitasking</p>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+
+    <!------------------------------- Circle Design Transition ------------------------------->
+
+    <section>
+      <div class="CircleDesign2">
+        <div class="Ellipse1"></div>
+        <div class="Ellipse2"></div>
+        <div class="Ellipse3"></div>
+        <div class="Ellipse4"></div>
+        <div class="Ellipse5"></div>
+        <div class="Ellipse6"></div>
+        <div class="Ellipse7"></div>
+        <div class="Ellipse8"></div>
+        <div class="Ellipse9"></div>
+        <div class="Ellipse10"></div>
+        <div class="Ellipse11"></div>
+        <div class="Ellipse12"></div>
+        <div class="Ellipse13"></div>
+        <div class="Ellipse14"></div>
+        <div class="Ellipse15"></div>
+        <div class="Ellipse16"></div>
+        <div class="Ellipse17"></div>
+      </div>
+
+      <!--------------------------------------------- Footer --------------------------------------------->
+
+      <footer>
+        <div class="footerContainer">
+          <div class="socialIcons">
+            <li>
+              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            </li>
+            <li>
+              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            </li>
+            <li>
+              <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+            </li>
+          </div>
+          <div class="footerNav">
+            <ul>
+              <li><a href="#header">Home</a></li>
+              <li><a href="#Services">About Me</a></li>
+              <li><a href="#About Us">Projects</a></li>
+              <li><a href="#Photo Gallery">Reach Out</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footerBottom">
+          <p>
+            Copyright &copy;2024; Designed by
+            <a href="https://github.com/GavraMG">Markus Gavra</a>
+          </p>
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
-
