--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
 
   <body>
-    <body>
 
         <!--------------------------------------------- Header --------------------------------------------->
         <div class="background">
@@ -66,6 +65,186 @@
         <div class="Ellipse16"></div>
         <div class="Ellipse17"></div>
       </div>
+
+      <!--------------------------------------------- About Me Section --------------------------------------------->
+
+    <section class="About_Me">
+        <div class="About_content">
+          <div class="image">
+            <img src="Icons/MG.jpg" alt="" />
+          </div>
+          <div class="header">
+            <h1>About Me</h1>
+            <p>
+              Hi, I'm Markus Gavra, welcome to my page! I'm a Romanian student at
+              the University of Guelph in Breslau, Ontario, specializing in
+              Software Engineering. I'm passionate about solving digital
+              challenges and see every obstacle as a chance for growth. When not
+              coding, I focus on fitness and strength training. Dive into my world
+              where technology and determination collide!
+            </p>
+  
+            <div class="button">
+              <div class="skills-toggle" data-toggle-box>
+                <button class="toggle-btn active" data-toggle-btn>Skills</button>
+  
+                <button class="toggle-btn" data-toggle-btn>Hobbies</button>
+              </div>
+            </div>
+  
+            <div class="skills" id="skills">
+              <div class="skills-box" data-skills-box>
+                <ul class="skills-list">
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">HTML5</div>
+  
+                      <div class="card-icon">
+                        <img src="Icons/HTML.svg" alt="HTML5 logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">CSS3</div>
+  
+                      <div class="card-icon">
+                        <img src="Icons/CSS.svg" alt="CSS3 logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">JavaScript</div>
+  
+                      <div class="card-icon">
+                        <img src="Icons/javascript.png" alt="JavaScript logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Java</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/Java.png" alt="Java logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Python</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/python.svg" alt="Python logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">C</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/C.svg" alt="C logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Firebase</div>
+  
+                      <div class="card-icon">
+                        <img src="Icons/firebase.png" alt="Firebase logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Github</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/Github.svg" alt="Github logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Git</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/Git.svg" alt="Git logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Figma</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/Figma.svg" alt="Figma logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Windows</div>
+  
+                      <div class="windows-icon">
+                        <img src="Icons/Windows.svg" alt="Git logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Linux</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/Linux.svg" alt="Linux logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Vs Code</div>
+  
+                      <div class="special-icon">
+                        <img src="Icons/VS Code.svg" alt="Vs code logo" />
+                      </div>
+                    </div>
+                  </li>
+  
+                  <li>
+                    <div class="skill-card">
+                      <div class="tooltip">Spline 3D</div>
+  
+                      <div class="card-icon">
+                        <img src="Icons/Spline.png" alt="Spline 3D logo" />
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+  
+                <ul class="tools-list">
+                  <h2>➤ Web Developer</h2>
+                  <h2>➤ Construction Hobbyist</h2>
+                  <h2>➤ F1 Enthusiast</h2>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
-
