--- a/index.html
+++ b/index.html
@@ -248,6 +248,63 @@
             </div>
           </div>
         </div>
-      </section>
+    </section>
+
+    <!--------------------------------------------- Education / Experience Section --------------------------------------------->
+
+    <div class="container">
+        <main class="row">
+          <section class="col">
+            <header class="title">
+              <h2>EDUCATION</h2>
+            </header>
+  
+            <div class="contents">
+              <div class="box">
+                <h4>2019 - 2023</h4>
+                <h3>High School Degree</h3>
+                <p>Grand River Collegiate Institute</p>
+                <p>Average: 91%</p>
+              </div>
+  
+              <div class="box">
+                <h4>2023 - 2028</h4>
+                <h3>Bachelor’s of Computing (Software Engineering)</h3>
+                <p>University of Guelph</p>
+                <p>Current Average: 84%</p>
+              </div>
+            </div>
+          </section>
+  
+          <section class="col">
+            <header class="title">
+              <h2>EXPERIENCE</h2>
+            </header>
+  
+            <div class="contents">
+              <div class="box">
+                <h4>2021 - Present</h4>
+                <h3>Project Manager</h3>
+                <p>Company: European Quality Painting</p>
+                <p>Skills: Leadership, Communication, Team Work</p>
+              </div>
+  
+              <div class="box">
+                <h4>2024 - Present</h4>
+                <h3>UI Designer</h3>
+                <p>Organization: Eclipse Expos</p>
+                <p>Skills: Creativity, Collaboration, Team Work</p>
+              </div>
+  
+              <div class="box">
+                <h4>2024 - Present</h4>
+                <h3>Event Committee Member</h3>
+                <p>Organization: SOCIS - University of Guelph</p>
+                <p>Skills: Organization, Team Work, Multitasking</p>
+              </div>
+            </div>
+          </section>
+        </main>
+      </div>
   </body>
 </html>
