--- a/index.html
+++ b/index.html
@@ -305,6 +305,61 @@
             </div>
           </section>
         </main>
-      </div>
+    </div>
+
+    <!------------------------------- Circle Design Transition ------------------------------->
+
+    <div class="CircleDesign2">
+        <div class="Ellipse1"></div>
+        <div class="Ellipse2"></div>
+        <div class="Ellipse3"></div>
+        <div class="Ellipse4"></div>
+        <div class="Ellipse5"></div>
+        <div class="Ellipse6"></div>
+        <div class="Ellipse7"></div>
+        <div class="Ellipse8"></div>
+        <div class="Ellipse9"></div>
+        <div class="Ellipse10"></div>
+        <div class="Ellipse11"></div>
+        <div class="Ellipse12"></div>
+        <div class="Ellipse13"></div>
+        <div class="Ellipse14"></div>
+        <div class="Ellipse15"></div>
+        <div class="Ellipse16"></div>
+        <div class="Ellipse17"></div>
+    </div>
+
+    <!--------------------------------------------- Footer --------------------------------------------->
+
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <li>
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                </li>
+                <li>
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                </li>
+                <li>
+                    <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                </li>
+            </div>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#Services">About Me</a></li>
+                    <li><a href="#About Us">Projects</a></li>
+                    <li><a href="#Photo Gallery">Reach Out</a></li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="footerBottom">
+            <p>
+                Copyright &copy;2024; Designed by
+                <a href="https://github.com/GavraMG">Markus Gavra</a>
+            </p>
+        </div>
+    </footer>
   </body>
 </html>
